--- a/dotbou/Base.lproj/Main.storyboard
+++ b/dotbou/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PUZ-rg-QKc">
-                                <rect key="frame" x="0.0" y="152" width="414" height="162"/>
+                                <rect key="frame" x="132" y="132" width="150" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
                         </subviews>
@@ -56,6 +56,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="categoryPicker" destination="PUZ-rg-QKc" id="vQK-CJ-0xd"/>
                         <outlet property="myPicker" destination="j8d-0J-4V1" id="1jf-Gr-XVn"/>
                         <segue destination="Ls7-KA-PZq" kind="show" identifier="start" id="HkU-FN-Ovt"/>
                     </connections>
@@ -181,6 +182,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="CategoryView" destination="9G6-Qx-qhr" id="8sc-Lb-A9i"/>
                         <segue destination="YEj-zh-0j9" kind="show" identifier="InputStart" id="9Qf-aK-W26"/>
                     </connections>
                 </viewController>
